--- a/ProyectoFinal/src/main/resources/templates/administrador.html
+++ b/ProyectoFinal/src/main/resources/templates/administrador.html
@@ -21,7 +21,7 @@
 <body>
 	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
 
-	<!--<nav class="navbar navbar-expand-lg bg-light">
+	<nav class="navbar navbar-expand-lg bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -50,7 +50,7 @@
 				</ul>
 			</div>
 		</div>
-	</nav>-->
+	</nav>
 
 	<video width="100%" height="900px" autoplay muted loop>
 		<source src="../video/video.mp4" type="video/mp4">
