--- a/ProyectoFinal/src/main/resources/templates/login.html
+++ b/ProyectoFinal/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<header th:replace="~{fragmentos/encabezado::encabezado}"></header>
+	<!--<header th:replace="~{fragmentos/encabezado::encabezado}"></header>-->
 
 	<section class="vh-100 bg-dark">
 		<div class="container-fluid h-custom">
@@ -26,7 +26,7 @@
 					<img src="../img/ALKACEN.png" th:scr="@{/img/ALKACEN}" class="img-fluid" alt="Sample image">
 				</div>
 				<div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-					<form>
+					<form th:action="@{/login}" method="post">
 						<div class="form-outline mb-4">
 							<input type="username" id="username" class="form-control form-control-lg"
 								placeholder="Enter a valid Username" />
@@ -34,13 +34,13 @@
 						</div>
 
 						<div class="form-outline mb-3">
-							<input type="password" id="form3Example4" class="form-control form-control-lg"
+							<input type="password" id="password" class="form-control form-control-lg"
 								placeholder="Enter password" />
 							<label class="form-label" for="form3Example4">Password</label>
 						</div>
 
 						<div class="text-center text-lg-start mt-4 pt-2">
-							<button type="button" class="btn btn-primary btn-lg"
+							<button type="submit" id="Agregar" class="btn btn-primary btn-lg"
 								style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
 						</div>
 
